# drait

./: .gitignore  LICENSE  NOTICE  README.md  SETUP.md  TESTING.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh
.github/workflows/: docs.yml  test.yml
docs/arc42/: .gitignore  Config.groovy  README.md  docToolchainConfig.groovy
docs/arc42/src/docs/: arc42.adoc
docs/arc42/src/docs/chapters/: 01_introduction_and_goals.adoc  02_architecture_constraints.adoc  03_system_scope_and_context.adoc  04_solution_strategy.adoc  05_building_block_view.adoc  06_runtime_view.adoc  07_deployment_view.adoc  08_concepts.adoc  09_architecture_decisions.adoc  10_quality_requirements.adoc  11_risks_and_technical_debt.adoc  12_glossary.adoc
docs/design/: metamodel.md  web-viewer-architecture.md
docs/exporters/: plantuml.md
examples/: advanced_features.puml  advanced_features_example.py  advanced_types.puml  advanced_types_example.py  company_model.puml  export_to_plantuml.py  metamodel_diagram.puml  parse_advanced_features.py  parse_and_visualize.py  parse_relationships.py  parsed_sample.puml  relationships.puml  relationships_example.py  simple_class_diagram.json  simple_example.py
src/desktop/: MIGRATION_TO_ESM.md  README.md  TESTING.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/desktop/electron/: main.js  preload.cjs  preload.js
src/desktop/renderer/: index.html
src/desktop/renderer/src/: App.css  App.tsx
src/desktop/renderer/src/components/: ClassNode.css  ClassNode.tsx  DiagramCanvas.tsx  PackageNode.css  PackageNode.tsx
src/desktop/renderer/src/styles/: index.css
src/desktop/renderer/src/types/: electron.d.ts  layout.ts  metamodel.ts
src/desktop/renderer/src/utils/: metamodelToFlow.ts
src/drait/: README.md  __init__.py  cli.py  metamodel.py
src/drait/exporters/: __init__.py  plantuml.py
src/drait/parsers/: __init__.py  python_parser.py
tests/: README.md  __init__.py  run_relationship_tests.py  test_metamodel.py  test_phase4_features.py  test_plantuml_exporter.py  test_relationship_inference.py
