[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drait"
version = "0.1.0"
description = "Model-Driven Development tool for bidirectional UML class diagram and Python code synchronization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "DRAIT Development Team"}
]
keywords = ["uml", "class-diagram", "model-driven", "reverse-engineering", "code-generation", "plantuml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Documentation",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]

[project.scripts]
drait = "drait.cli:main"
drait-parse = "drait.cli:parse_command"
drait-export = "drait.cli:export_command"

[project.urls]
Homepage = "https://github.com/m-hptn/drait"
Documentation = "https://github.com/m-hptn/drait/blob/main/README.md"
Repository = "https://github.com/m-hptn/drait"
Issues = "https://github.com/m-hptn/drait/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/drait"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313', 'py314']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
